src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CSC_Report_Owner_Level2_Manager__c</fullName>
        <formula>Owner:User.Manager.LastName +  Owner:User.Manager.FirstName</formula>
        <label>Owner Level2 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_LoginName__c</fullName>
        <formula>Owner:User.Username</formula>
        <label>Owner LoginName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Workgroup__c</fullName>
        <label>Case Owner Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_PGU_GROUPING__c</fullName>
        <label>PGU GROUPING</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_PL_PGU__c</fullName>
        <formula>CASE( CSC_Product_Line__c , &quot;08&quot;,&quot;ESS BCS&quot;,
&quot;10&quot;,&quot;ESS BCS&quot;,
&quot;16&quot;,&quot;ESS BCS&quot;,
&quot;23&quot;,&quot;ESS BCS&quot;,
&quot;31&quot;,&quot;ESS BCS&quot;,
&quot;37&quot;,&quot;ESS BCS&quot;,
&quot;38&quot;,&quot;ESS BCS&quot;,
&quot;71&quot;,&quot;ESS BCS&quot;,
&quot;183&quot;,&quot;ESS BCS&quot;,
&quot;332&quot;,&quot;ESS BCS&quot;,
&quot;336&quot;,&quot;ESS BCS&quot;,
&quot;344&quot;,&quot;ESS BCS&quot;,
&quot;345&quot;,&quot;ESS BCS&quot;,
&quot;1X&quot;,&quot;ESS BCS&quot;,
&quot;1Y&quot;,&quot;ESS SWD&quot;,
&quot;2M&quot;,&quot;ESS BCS&quot;,
&quot;3C&quot;,&quot;ESS SWD&quot;,
&quot;4U&quot;,&quot;ESS ISS&quot;,
&quot;7A&quot;,&quot;ESS SWD&quot;,
&quot;8B&quot;,&quot;ESS ISS&quot;,
&quot;HA&quot;,&quot;ESS BCS&quot;,
&quot;HX&quot;,&quot;ESS SWD&quot;,
&quot;J2&quot;,&quot;ESS SWD&quot;,
&quot;J3&quot;,&quot;ESS ISS&quot;,
&quot;JV&quot;,&quot;ESS BCS&quot;,
&quot;LA&quot;,&quot;ESS ISS&quot;,
&quot;LI&quot;,&quot;ESS SWD&quot;,
&quot;LJ&quot;,&quot;ESS SWD&quot;,
&quot;LK&quot;,&quot;ESS SWD&quot;,
&quot;LL&quot;,&quot;ESS SWD&quot;,
&quot;LM&quot;,&quot;ESS SWD&quot;,
&quot;LN&quot;,&quot;ESS SWD&quot;,
&quot;MV&quot;,&quot;ESS ISS&quot;,
&quot;NW&quot;,&quot;ESS BCS&quot;,
&quot;SI&quot;,&quot;ESS ISS&quot;,
&quot;SY&quot;,&quot;ESS ISS&quot;,
&quot;TN&quot;,&quot;ESS ISS&quot;,
&quot;TQ&quot;,&quot;ESS BCS&quot;,
&quot;TR&quot;,&quot;ESS BCS&quot;,
&quot;UZ&quot;,&quot;ESS ISS&quot;,
&quot;Other&quot; )</formula>
        <label>PL_PGU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_PMMS_Measure_flag__c</fullName>
        <formula>IF( OR(CSC_Report_I04A_Case__c = 1,
CSC_Report_I04A_Case__c = 1,
CSC_Report_I05D_Case_new__c = 1,
CSC_Report_I06A_Case__c = 1,
CSC_Report_I06F_Case__c = 1,
CSC_Report_Onsite_Response_Time_Case__c = 1,
CSC_Report_Onsite_Resolution_Time_Case__c= 1) , 1, 0)</formula>
        <label>PMMS Measure flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Package_name__c</fullName>
        <formula>Entitlement.Package_name__c</formula>
        <label>Package name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Part_Number_Counts__c</fullName>
        <label>Part_Number Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Part_Number__c</fullName>
        <label>Part Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Parts_Consumed__c</fullName>
        <label>Parts Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Pin_Code__c</fullName>
        <formula>Account.CSC_PinCode__c</formula>
        <label>Pin Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Prev_Case_Id__c</fullName>
        <formula>PreCase__r.CaseNumber</formula>
        <label>Prev Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Prev_Delivery_Alternative__c</fullName>
        <formula>CASE(PreCase__r.Delivery_Alternative__c, &quot;0&quot;, &quot;DEF/NULL&quot;, 
&quot;200&quot;, &quot;Remote With Phone&quot;, 
&quot;300&quot;, &quot;Zero Onsite&quot;, 
&quot;400&quot;, &quot;Remote With Parts&quot;, 
&quot;500&quot;, &quot;Depot Repair&quot;, 
&quot;600&quot;, &quot;Courier Assist&quot;, 
&quot;900&quot;, &quot;H3C CE Onsite&quot;,&quot;&quot;)</formula>
        <label>Prev Delivery Alternative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_QACode__c</fullName>
        <label>QA Code</label>
        <length>75256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RCEL1_OwnerNum__c</fullName>
        <label>RCEL1 OwnerNum</label>
        <summarizedField>Case_Owner__c.CSC_Report_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_Old_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>RCE L1</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RCEL2_OwnerNum__c</fullName>
        <label>RCEL2 OwnerNum</label>
        <summarizedField>Case_Owner__c.CSC_Report_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_Old_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>RCE L2</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RCTAT_Missed_By_Mins__c</fullName>
        <formula>IF((CSC_Report_Target_End_Of_DBD__c - CSC_Report_Actual_End_Of_DBD__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Target_End_Of_DBD__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Target_End_Of_DBD__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),15,2)))&gt;0, 

(CSC_Report_Target_End_Of_DBD__c - CSC_Report_Actual_End_Of_DBD__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Target_End_Of_DBD__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Target_End_Of_DBD__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),15,2))), 

0)</formula>
        <label>RCTAT Missed By Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RRD30_Del_Alt__c</fullName>
        <formula>IF(TEXT(PreCase__r.Delivery_Alternative__c) &lt;&gt; &quot;&quot;, TEXT(PreCase__r.Delivery_Alternative__c),  TEXT(Delivery_Alternative__c) )</formula>
        <label>RRD30 Del Alt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Repair_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Class</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Cases (Repair Class)</relationshipLabel>
        <relationshipName>CSC_Report_Repair_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Rerepair_30_Days__c</fullName>
        <formula>IF( ISBLANK(CSC_Days_Btwn_Rerpr__c) , null, IF(CSC_Days_Btwn_Rerpr__c&lt;=30,1, 0))</formula>
        <label>Rerepair 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Rerepair_90_Days__c</fullName>
        <formula>IF( ISBLANK(CSC_Days_Btwn_Rerpr__c) , null, IF(CSC_Days_Btwn_Rerpr__c&lt;=90,1, 0))</formula>
        <label>Rerepair 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Rescheduledcategory_GSD__c</fullName>
        <formula>IF( OR(CSC_Report_CD_1B_Case_New__c = True,  CSC_Report_CD_1V_Case__c = True, CSC_Report_CD_8_Case__c = True), &apos;Rescheduled&apos;, &apos;NonRescheduled&apos;)</formula>
        <label>Rescheduledcategory_GSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Rescheduledcategory__c</fullName>
        <label>Rescheduledcategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Resolution_Time_Days__c</fullName>
        <label>Resolution Time Days</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Response_Time__c</fullName>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_SLA__c</fullName>
        <formula>Entitlement.SLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Service_Flag__c</fullName>
        <formula>Entitlement.Service_Flag__c</formula>
        <label>Service Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Service_Time__c</fullName>
        <formula>Entitlement.Service_Time__c</formula>
        <label>Service Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Service_Type__c</fullName>
        <formula>Entitlement.Service_Type__c</formula>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_SubOwner_Team_pre__c</fullName>
        <label>SubOwner Team-pre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_SubOwner_Work_Group_pre__c</fullName>
        <label>SubOwner Work Group-pre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_SubOwner__c</fullName>
        <label>SubOwner  FullName-pre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Supp_PL__c</fullName>
        <label>Supp PL by hwpl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_TAT__c</fullName>
        <formula>IF( CSC_Report_CA_Handled__c = 1, 

(CSC_Report_CA_Yank_Time__c - CSC_Report_Case_To_CA_Q_Time__c )*24*60 + VALUE(MID(TEXT(CSC_Report_CA_Yank_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Case_To_CA_Q_Time__c ),12,2))*60 + 
(( VALUE(MID(TEXT(CSC_Report_CA_Yank_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Case_To_CA_Q_Time__c ),15,2)))), 

( CSC_Report_CA_Assign_Time__c - CreatedDate )*24*60 + VALUE(MID(TEXT(CSC_Report_CA_Assign_Time__c ),12,2)) - VALUE(MID(TEXT(CreatedDate ),12,2))*60 + 
(( VALUE(MID(TEXT(CSC_Report_CA_Assign_Time__c ),15,2)) - VALUE(MID(TEXT(CreatedDate ),15,2)))))</formula>
        <label>TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_TAT_in_Days__c</fullName>
        <formula>(ClosedDate -  CreatedDate)*24</formula>
        <label>TAT in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Target_End_Of_DBD__c</fullName>
        <formula>IF(CSC_Report_SLA__c = &quot;CTR&quot;,  CreatedDate + 1/48 , 
 IF( CONTAINS(CSC_Report_SLA__c , &quot;SBD&quot;) , CreatedDate + 1/24, 
 IF(CONTAINS(CSC_Report_SLA__c , &quot;NBD&quot;), CreatedDate + 1/12, null) ) )</formula>
        <label>Target End Of DBD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Target_GSC_End_Time__c</fullName>
        <formula>IF(CSC_Report_SLA__c = &quot;CTR&quot;, CreatedDate + 1/32 , 
IF( CONTAINS(CSC_Report_SLA__c , &quot;SBD&quot;) , CreatedDate+ 1/16, 
IF(CONTAINS(CSC_Report_SLA__c , &quot;NBD&quot;), CreatedDate+ 7/48, null) ) )</formula>
        <label>Target GSC End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Tenure__c</fullName>
        <formula>IF(   DATEVALUE(ClosedDate)   -  Owner:User.CSC_Report_Start_date__c &gt; 90, 
      &apos;&gt;90 days&apos;, 
      &apos;&lt;90 days&apos;)</formula>
        <label>Tenure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Time_Excludes_Al_Monitor_Time__c</fullName>
        <label>Time Excludes All Monitor Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Total_Field_Request_Parts_Use__c</fullName>
        <label>Total Field Requested Parts Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Total_GSC_Recommend_Parts_Use__c</fullName>
        <label>Total GSC Recommended Parts Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Total_GSC_Recommended_Parts__c</fullName>
        <label>Total GSC Recommended Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Transfer_To_CC_Cases_L1_T__c</fullName>
        <label>Transfer To CC Sub Cases L1 To L2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Ttl_Onsite_GSC_Scase__c</fullName>
        <label>Total Onsite GSC Workorder For Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Ttl_Parts_Consumed__c</fullName>
        <label>Total Parts Consumed Per Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_X_Elevation_Level__c</fullName>
        <label>X Elevation Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_X_Mod_Value__c</fullName>
        <formula>Entitlement.Coverage__c</formula>
        <label>X Mod Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_remote_resolve__c</fullName>
        <formula>IF(CONTAINS(Text(CSC_Resolution_Type__c) , &quot;Remote&quot;)  , 1, 0)</formula>
        <label>Remote Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_research_log_time__c</fullName>
        <label>Research Log Time (Hour)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Requested_DT_Report__c</fullName>
        <label>Requested D/T(Report)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Requested_DT__c</fullName>
        <label>Requested D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Requested_Guaranteed_DT__c</fullName>
        <label>Requested Guaranteed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSC_Resolution_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Repair</fullName>
                </value>
                <value>
                    <fullName>Parts Shipped</fullName>
                </value>
                <value>
                    <fullName>SBD Courier Assist</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>IRS and 3Par STaTS False Alarm</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>6XX End Call</fullName>
                </value>
                <value>
                    <fullName>Not Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Resolution_Sub_code__c</fullName>
        <label>Resolution Sub-code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSC_Resolution_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HW Issue</fullName>
                </value>
                <value>
                    <fullName>SW Issue</fullName>
                </value>
                <value>
                    <fullName>Firmware/BIOS/Driver updates (except 3Par)</fullName>
                </value>
                <value>
                    <fullName>Implementation/Configuration/Setup questions</fullName>
                </value>
                <value>
                    <fullName>Non-Technical/Presales/Contract Coverage</fullName>
                </value>
                <value>
                    <fullName>Customer self-solved without HP assistance</fullName>
                </value>
                <value>
                    <fullName>Duplicate case logged</fullName>
                </value>
                <value>
                    <fullName>Test Case</fullName>
                </value>
                <value>
                    <fullName>Failed RPL</fullName>
                </value>
                <value>
                    <fullName>Unable to reach customer to begin diagnosis</fullName>
                </value>
                <value>
                    <fullName>Customer unwilling/Unable to perform remote diagnosis and/or implement action plan</fullName>
                </value>
                <value>
                    <fullName>Transferred out of HP EG</fullName>
                </value>
                <value>
                    <fullName>Customer declined billable service</fullName>
                </value>
                <value>
                    <fullName>Reject Subk Subcode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-site</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Remote resolve</fullName>
                </value>
                <value>
                    <fullName>Remote Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_SAR__c</fullName>
        <label>SAR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_SDI__c</fullName>
        <label>SDI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_SLA_Target_Mins_With_1B__c</fullName>
        <label>CSC SLA Target Mins With 1B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_SLA_Target_Mins__c</fullName>
        <label>CSC SLA Target Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_SMS_Content__c</fullName>
        <label>SMS Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSC_SN__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Services_Business__c</fullName>
        <formula>CSC_hpl__r.Services_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Severity__c</fullName>
        <defaultValue>&apos;3-Normal&apos;</defaultValue>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Critical-Down</fullName>
                </value>
                <value>
                    <fullName>2-Critical-Degraded</fullName>
                </value>
                <value>
                    <fullName>3-Normal</fullName>
                </value>
                <value>
                    <fullName>4-Low Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Software_Product_Version__c</fullName>
        <label>Software Product Version</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Spl_Dlv__c</fullName>
        <formula>CSC_hpl__r.Spl_Dlv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spl Dlv</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Spl_Name__c</fullName>
        <formula>CSC_hpl__r.Spl_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spl Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Spl__c</fullName>
        <formula>CSC_hpl__r.Spl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Start_Monitor__c</fullName>
        <label>Start Monitor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Start_Pending__c</fullName>
        <label>Start Pending</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Sub_Gbu__c</fullName>
        <formula>CSC_hpl__r.Sub_Gbu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Gbu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Warranty_Status__c</fullName>
        <label>Warranty Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_hpl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hpl</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_hpl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Create_Datetime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Case Create Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>IF( ISNULL( ClosedDate ), NOW() - CreatedDate ,  ClosedDate - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case(Duration)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Emp_Category__c</fullName>
        <formula>TEXT( Owner:User.CSC_Report_Emp_Category__c )</formula>
        <label>Case Owner Emp Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Pin_Code__c</fullName>
        <label>Case Pin Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SLA__c</fullName>
        <defaultValue>CASE($RecordType.Name,&apos;01-Account Request&apos;,16,&apos;02-SFDC Admin Support&apos;,8,&apos;03-Support Request&apos;,8,&apos;04-Legal Review&apos;,8,&apos;99-Other Issues&apos;,8,0)</defaultValue>
        <label>Case SLA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_With_100_Diagnosis_Accuracy__c</fullName>
        <label>Case With 100 Diagnosis Accuracy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_With_Accuracy__c</fullName>
        <formula>if(CSC_Report_Total_Field_Request_Parts_Use__c + CSC_Report_Total_GSC_Recommend_Parts_Use__c = 0, 0 , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases With Accuracy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_With_Efficiency__c</fullName>
        <formula>if(CSC_Report_Total_GSC_Recommended_Parts__c = 0 ,0 ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases With Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_status__c</fullName>
        <description>记录：CE上岗证状态和L1上岗证状态</description>
        <label>Certificate status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-安庆</fullName>
                </value>
                <value>
                    <fullName>安徽-蚌埠</fullName>
                </value>
                <value>
                    <fullName>安徽-亳州</fullName>
                </value>
                <value>
                    <fullName>安徽-巢湖</fullName>
                </value>
                <value>
                    <fullName>安徽-池州</fullName>
                </value>
                <value>
                    <fullName>安徽-滁州</fullName>
                </value>
                <value>
                    <fullName>安徽-阜阳</fullName>
                </value>
                <value>
                    <fullName>安徽-合肥</fullName>
                </value>
                <value>
                    <fullName>安徽-淮北</fullName>
                </value>
                <value>
                    <fullName>安徽-淮南</fullName>
                </value>
                <value>
                    <fullName>安徽-黄山</fullName>
                </value>
                <value>
                    <fullName>安徽-六安</fullName>
                </value>
                <value>
                    <fullName>安徽-马鞍山</fullName>
                </value>
                <value>
                    <fullName>安徽-其它城市</fullName>
                </value>
                <value>
                    <fullName>安徽-铜陵</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>安徽-宣城</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>重庆市</fullName>
                </value>
                <value>
                    <fullName>重庆市-北碚区</fullName>
                </value>
                <value>
                    <fullName>重庆市-璧山</fullName>
                </value>
                <value>
                    <fullName>重庆市-长寿区</fullName>
                </value>
                <value>
                    <fullName>重庆市-城口县</fullName>
                </value>
                <value>
                    <fullName>重庆市-大足县</fullName>
                </value>
                <value>
                    <fullName>重庆市-垫江县</fullName>
                </value>
                <value>
                    <fullName>重庆市-丰都</fullName>
                </value>
                <value>
                    <fullName>重庆市-奉节</fullName>
                </value>
                <value>
                    <fullName>重庆市-合川市</fullName>
                </value>
                <value>
                    <fullName>重庆市-江北区</fullName>
                </value>
                <value>
                    <fullName>重庆市-江津市</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Year_Month__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(ClosedDate))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(ClosedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year-Month</label>
        <type>Text</type>
    </fields>
</CustomObject>